--- a/sample/MaterialsList_SearchGoodMaterial.yml
+++ b/sample/MaterialsList_SearchGoodMaterial.yml
@@ -33,7 +33,7 @@ workflow:
     order: workflow
     list:
     - group:
-      - outputname: chooseMaterialsDatabase
+      - outputname: chooseMaterialsList
         outputtype: function
     - group:
       - methodname: queryMaterialsWithCrystalAndNotarget
