--- a/sample/MaterialsList_TrainingSet.yml
+++ b/sample/MaterialsList_TrainingSet.yml
@@ -5,7 +5,7 @@ workflow:
     order: workflow
     list:
     - group:
-      - outputname: chooseMaterialsDatabase
+      - outputname: chooseMaterialsList
         outputtype: function
     - group:
       - methodname: queryMaterialsWithCrystalAndTarget
@@ -16,7 +16,7 @@ workflow:
     order: workflow
     list:
     - group:
-      - outputname: chooseMaterialsDatabase
+      - outputname: chooseMaterialsList
         outputtype: function
     - group:
       - methodname: queryMaterialsWithCrystalAndTarget
