--- a/Materials/AtomicCoordinate2Descriptor_Parts.yml
+++ b/Materials/AtomicCoordinate2Descriptor_Parts.yml
@@ -75,6 +75,8 @@ workflow:
         methodtype: method
         outputname: VoroniiNearestNeighbourAtoms
         outputtype: parts
+      - outputname: ElectricConfiguration
+        outputtype: parts
     - group:
       - methodname: AtomicOrbitalFieldMatrix
         methodtype: method
