--- a/Materials/AtomicProperty_CausTheory.yml
+++ b/Materials/AtomicProperty_CausTheory.yml
@@ -7,7 +7,7 @@ workflow:
     - group:
       - outputname: Crystal
         outputtype: parts
-      - outputname: chooseCenterAtom
+      - outputname: chooseCenterAtoms
         outputtype: function
     - group:
       - methodname: AttributeElement
